<resources>
    <string name="app_name">MRS</string>
    <string name="doctor_name">Doctors name</string>
    <string name="doctor_name_label">Example: John</string>
    <string name="date_of_taking_place">Date of taking place</string>
    <string name="address_label">Address</string>
    <string name="address">Palestine, Gaza, GazaSkyGeeks</string>
    <string name="email_hint">example@example.com</string>
    <string name="type_label">Type:</string>
    <string name="report_label">Report</string>
    <string name="xray_label">X-Ray</string>
    <string name="Appointment_label">Appointment</string>
    <string name="Other_label">Other</string>
    <string name="export">Export</string>
    <string name="developer">Developer</string>
    <string name="insert_image_label">Insert Image</string>
    <string name="note_label">Note:</string>
    <string name="save">Save</string>

</resources>
