<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.mumen.mrs.enter_data">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_name"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="29dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/doctor_name_label"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date_of_taking_place"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="@+id/editText4"
            app:layout_constraintTop_toBottomOf="@+id/editText4" />


        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/address_label"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="@+id/editText5"
            app:layout_constraintTop_toBottomOf="@+id/editText5" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/type_label"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="@+id/editText6"
            app:layout_constraintTop_toBottomOf="@+id/editText6" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintLeft_toLeftOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <RadioButton
            android:id="@+id/report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/report_label"
            app:layout_constraintLeft_toLeftOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <RadioButton
            android:id="@+id/xray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/xray_label"
            app:layout_constraintTop_toBottomOf="@+id/report"
            tools:layout_editor_absoluteX="29dp" />

        <RadioButton
            android:id="@+id/appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Appointment_label"
            app:layout_constraintTop_toBottomOf="@+id/xray"
            tools:layout_editor_absoluteX="29dp" />

        <RadioButton
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Other_label"
            app:layout_constraintTop_toBottomOf="@+id/appointment"
            tools:layout_editor_absoluteX="29dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="140dp"
            android:layout_height="138dp"
            app:srcCompat="@android:drawable/ic_lock_lock"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/other"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_image_label"
            android:textSize="25dp"

            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="541dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_label"
            android:textSize="35dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView4"
            />


    </android.support.constraint.ConstraintLayout>
</ScrollView>